--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   drift: ^2.21.0
   drift_flutter: ^0.2.1
 
+  get_it: ^8.0.2
+  provider: ^6.1.2
+  path_provider: ^2.1.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
