--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.1.2
   http:
   image_picker: ^1.1.2
+  flutter_downloader: ^1.11.8
 
 dev_dependencies:
   flutter_test:
