open/download files implementation for both platforms

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,12 @@ dependencies:
   get_it: ^8.0.2
   provider: ^6.1.2
   http:
+
   image_picker: ^1.1.2
-  flutter_downloader: ^1.11.8
+  path_provider:
+  universal_html: ^2.2.4
+  open_file: ^3.5.10
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
